# glow

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_REFACTORING.md  DEVCONTAINER_MIGRATION.md  README.md  compose.override.yml  compose.test.yml  compose.yml  deploy.sh  dev-init.sh  docker-compose.yml  docker-compose.yml.old  nginx.conf
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
api/: Dockerfile  alembic.ini  auth.db.backup  pyproject.toml
dashboard/: .gitignore  Dockerfile  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
deploy/: ODK_INTEGRATION_PLAN.md  deploy.sh
deploy/aws/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  deploy.py  docker-entrypoint.sh  pyproject.toml  test_deploy.py
deploy/aws/codebuild/runner/: buildspec.yml
deploy/aws/runner/: bootstrap.sh  healthcheck.sh  install-runner-deps.sh  packer.pkr.hcl
deploy/aws/runtime/: activate-stack.sh  get-git-ref.sh  mount-data-volume.sh  stop-stack.sh  unmount-data-volume.sh  update-instance.sh
deploy/aws/src/glow_aws_deploy/: builds.py  certificates.py  cli.py  common.py  cutover.py  terraform.py
deploy/aws/templates/: runner-userdata.sh.tpl
deploy/aws/terraform/: logging.tf  main.tf  networking.tf  outputs.tf  runner.tf  variables.tf  versions.tf
deploy/aws/terraform_bootstrap/: main.tf  outputs.tf  versions.tf
deploy/aws/tests/: test_common.py  test_cutover.py
development/: DASHBOARD.md  MOCK_DATA.md  REWORK_QUERIES.md  STUDENT_IDENTITY.md
(+186 files in other folders)
